--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   intl: ^0.19.0
   fl_chart: ^0.69.0
   google_fonts: ^6.2.1
+  flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.2
+
+
 
 dev_dependencies:
   flutter_test:
